# sql_homework_5

./: .env  .gitignore  data.json  main.py  pyproject.toml  requirements.txt
classes/: database.py
utils/: sql_requests.py
